--- a/assets/gift-card.scss
+++ b/assets/gift-card.scss
@@ -101,7 +101,7 @@ $z-index-announcement-bar: 10;
 $z-index-skip-to-content: 10000; // really high to be safe of app markup
 
 /*================ SVG ================*/
-$svg-select-icon: #{'//www.chintiandparker.com/cdn/shop/t/302/assets/ico-select.svg?v=31102035367710360851721142310'};
+$svg-select-icon: #{'//www.chintiandparker.com/cdn/shop/t/306/assets/ico-select.svg?68714'};
 
 /*================ Drawers ================*/
 $transition-drawer: all 0.45s cubic-bezier(0.29, 0.63, 0.44, 1);
